deploy: 88e68700ddf91378c09e0f18480e1bc428f6acc0

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ This biography is so important it spans multiple lines.
         </ul>
         <h1> Sections dictionary (gallery removed because image binaries are large)</h1>
                                 <h2>sections['education']</h2>
-            [[defaultdict(&lt;function Markdown.__metadata__.&lt;locals&gt;.&lt;lambda&gt; at 0x7f57f5d6ee50&gt;,
+            [[defaultdict(&lt;function Markdown.__metadata__.&lt;locals&gt;.&lt;lambda&gt; at 0x7fed7de42e50&gt;,
               {&#39;current&#39;: False,
                &#39;institution&#39;: &#39;MIT&#39;,
                &#39;month_ended&#39;: False,
@@ -75,7 +75,7 @@ This biography is so important it spans multiple lines.
                &#39;year_ended&#39;: &#39;2016&#39;,
                &#39;year_started&#39;: &#39;2014&#39;}),
   &#39;&lt;p&gt;I studied things at MIT&lt;/p&gt;&#39;],
- [defaultdict(&lt;function Markdown.__metadata__.&lt;locals&gt;.&lt;lambda&gt; at 0x7f57f5d14040&gt;,
+ [defaultdict(&lt;function Markdown.__metadata__.&lt;locals&gt;.&lt;lambda&gt; at 0x7fed7dde8040&gt;,
               {&#39;current&#39;: &#39;true&#39;,
                &#39;institution&#39;: &#39;UBC&#39;,
                &#39;month_ended&#39;: False,
@@ -85,7 +85,7 @@ This biography is so important it spans multiple lines.
                &#39;year_started&#39;: &#39;2014&#39;}),
   &#39;&lt;p&gt;This is my current university&lt;/p&gt;&#39;]]
                                             <h2>sections['blog']</h2>
-            [[defaultdict(&lt;function Markdown.__metadata__.&lt;locals&gt;.&lt;lambda&gt; at 0x7f57f5d14160&gt;,
+            [[defaultdict(&lt;function Markdown.__metadata__.&lt;locals&gt;.&lt;lambda&gt; at 0x7fed7dde8160&gt;,
               {&#39;created&#39;: &#39;2022-04-24&#39;,
                &#39;title&#39;: &#39;Example&#39;,
                &#39;updated&#39;: &#39;2022-04-24&#39;}),
@@ -99,14 +99,14 @@ This biography is so important it spans multiple lines.
   &#39;quas aliquid.&lt;/p&gt;&#39;,
   &#39;example.md&#39;]]
                                                                 <h2>sections['projects']</h2>
-            [[defaultdict(&lt;function Markdown.__metadata__.&lt;locals&gt;.&lt;lambda&gt; at 0x7f57f5d14430&gt;,
+            [[defaultdict(&lt;function Markdown.__metadata__.&lt;locals&gt;.&lt;lambda&gt; at 0x7fed7dde8430&gt;,
               {&#39;image&#39;: &#39;https://raw.githubusercontent.com/Descent098/ezcv/master/.github/logo.png&#39;,
                &#39;link&#39;: &#39;https://github.com/Descent098/ezcv&#39;,
                &#39;title&#39;: &#39;EZ-CV&#39;}),
   &#39;&lt;p&gt;A python-based static site generator for setting up a CV/Resume &#39;
   &#39;site&lt;/p&gt;&#39;]]
                                             <h2>sections['volunteering_experience']</h2>
-            [[defaultdict(&lt;function Markdown.__metadata__.&lt;locals&gt;.&lt;lambda&gt; at 0x7f57f5d144c0&gt;,
+            [[defaultdict(&lt;function Markdown.__metadata__.&lt;locals&gt;.&lt;lambda&gt; at 0x7fed7dde84c0&gt;,
               {&#39;company&#39;: &#39;Canadian Coding&#39;,
                &#39;current&#39;: False,
                &#39;month_ended&#39;: &#39;October&#39;,
@@ -115,7 +115,7 @@ This biography is so important it spans multiple lines.
                &#39;year_ended&#39;: &#39;2020&#39;,
                &#39;year_started&#39;: &#39;2017&#39;}),
   &#39;&lt;p&gt;I do all the web coding&lt;/p&gt;&#39;],
- [defaultdict(&lt;function Markdown.__metadata__.&lt;locals&gt;.&lt;lambda&gt; at 0x7f57f5d14670&gt;,
+ [defaultdict(&lt;function Markdown.__metadata__.&lt;locals&gt;.&lt;lambda&gt; at 0x7fed7dde8670&gt;,
               {&#39;company&#39;: &#39;Canadian Coding&#39;,
                &#39;current&#39;: &#39;true&#39;,
                &#39;month_ended&#39;: False,
@@ -125,7 +125,7 @@ This biography is so important it spans multiple lines.
                &#39;year_started&#39;: &#39;2019&#39;}),
   &#39;&lt;p&gt;I volunteer to teach coding&lt;/p&gt;&#39;]]
                                             <h2>sections['work_experience']</h2>
-            [[defaultdict(&lt;function Markdown.__metadata__.&lt;locals&gt;.&lt;lambda&gt; at 0x7f57f5d14700&gt;,
+            [[defaultdict(&lt;function Markdown.__metadata__.&lt;locals&gt;.&lt;lambda&gt; at 0x7fed7dde8700&gt;,
               {&#39;company&#39;: &#39;Canadian Coding&#39;,
                &#39;current&#39;: False,
                &#39;month_ended&#39;: &#39;October&#39;,
@@ -134,7 +134,7 @@ This biography is so important it spans multiple lines.
                &#39;year_ended&#39;: &#39;2020&#39;,
                &#39;year_started&#39;: &#39;2017&#39;}),
   &#39;&lt;p&gt;I do all the technical things&lt;/p&gt;&#39;],
- [defaultdict(&lt;function Markdown.__metadata__.&lt;locals&gt;.&lt;lambda&gt; at 0x7f57f5d148b0&gt;,
+ [defaultdict(&lt;function Markdown.__metadata__.&lt;locals&gt;.&lt;lambda&gt; at 0x7fed7dde88b0&gt;,
               {&#39;company&#39;: &#39;Canadian Coding&#39;,
                &#39;current&#39;: &#39;true&#39;,
                &#39;month_ended&#39;: False,
