deploy: 3f86c4542562a107b3d7f9f2a43c7800bc73edde

--- a/resume.html
+++ b/resume.html
@@ -116,8 +116,8 @@
             <div class="row">
                 <div class="col-md-12">
                     <h2 class="text-center">Summary</h2>
-                    <p class="text-center">A vivid and succinct description of yourself.
-This biography is so important it spans multiple lines.
+                    <p class="text-center">I am a technologist that Blends academic training in business management and data analytics with hands-on experience in systems administration and training to offer employers a track record of delivering on tasks accurately, efficiently and quickly.
+Known for best-in-class attention to detail and  communications with stakeholders across all levels.
 </p>
                     <hr>
                 </div>
